Incluí Opção de Receita e faz as operações entre Troca de Receita e Custo para as Obras Origem e Destino, Altera a Lista de Unidade de Medida pra uma lista FIxa

--- a/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/style.css
+++ b/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/style.css
@@ -51,6 +51,14 @@
     border-radius: 50%;
 }
 
+.iconStonks{
+    color: green;
+}
+.iconNotStonks{
+    color: red;
+    transform: rotate(90deg);
+}
+
 
 
 
