--- a/Transferência de Custo entre Obras/wcm/widget/wdg_Transferencia_de_custos_entre_obras/src/main/webapp/resources/css/wdg_Transferencia_de_custos_entre_obras.css
+++ b/Transferência de Custo entre Obras/wcm/widget/wdg_Transferencia_de_custos_entre_obras/src/main/webapp/resources/css/wdg_Transferencia_de_custos_entre_obras.css
@@ -18,8 +18,10 @@
     padding: 0px;
     border-radius: 20px;
 }
-
-#d3-tooltip{
+.alignCenter{
+    text-align: center;
+}
+.d3-tooltip{
     position: absolute;
     display: none;
     background: rgb(0, 0, 0);
@@ -104,7 +106,7 @@
 
 
 .castilho-dark-mode .table-hover tbody tr:hover, .castilho-dark-mode .table-hover tr:hover td{ 
-    background-color: white !important;
+    background-color: #d2d3d6 !important;
     color: black !important;
 }
 
