--- a/Transferência de Custo entre Obras/wcm/widget/wdg_Transferencia_de_custos_entre_obras/src/main/webapp/resources/css/wdg_Transferencia_de_custos_entre_obras.css
+++ b/Transferência de Custo entre Obras/wcm/widget/wdg_Transferencia_de_custos_entre_obras/src/main/webapp/resources/css/wdg_Transferencia_de_custos_entre_obras.css
@@ -60,7 +60,7 @@
 
 .panel.panel-primary{
     border-radius: 20px !important;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .panel.panel-primary .panel-heading{
@@ -128,4 +128,20 @@
 }
 .castilho-dark-mode .legendText{
     fill: white !important;
+}
+
+
+/* Selectize */
+.selectize-dropdown .active:not(.selected){
+    background-color: lightgray !important;
+    color: black !important;
+}
+.selectize-dropdown .selected{
+    background-color: lightgray !important;
+    color: black !important;
+}
+.selectize-control.single .selectize-input{
+    box-shadow: rgba(0, 0, 0, 0.0) !important;
+    background-color: #fff !important;
+    background-image: none !important;
 }
