--- a/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/style.css
+++ b/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/style.css
@@ -35,6 +35,15 @@
 }
 
 
+/* Column height wraper */
+.flexRow{
+    display: flex !important;
+    align-items: stretch !important;
+    margin-bottom: 20px;
+}
+.column {
+    flex: 1 !important;
+}
 
 
 
